8.4.4 (01-08-2022)
- Bug Fix: In finding the best academic tariff, if the administrative office is null then return the tariff for finantial entity

8.4.3 (19-07-2022)
- Refactor: Remove deprecated PaymentPenaltyEventTarget entity
- Refactor: Do not mark AcademicTariff::findMatch by CycleType as not deprecated
- Refactor: Do not register the AdministrativeOffice in the AcademicTariff entity

8.4.2 (05-07-2022)
- Refactor: Implement import and export operations for AcademicDebtGenerationRuleRestriction class and subclasses, in order to be able to migrate from other systems
- Refactor: Set constructor and checkRules of AcademicDebtGenerationRuleRestriction and subclasses as public in order to migrate

8.4.1 (30-06-2022)
- Bug Fix: Fix the missing return from calculating the tariff when the academic service request has the cycle type

8.4.0 (24-06-2022)
- Refactor: Change relation between ReservationTaxEventTarget and ExecutionInterval, instead of ExecutionYear
- Improvement: Support consumers when invoking ReservationTaxEventTarget::handleTotalPayment
- Bug Fix: Various bug fixes and improvements in ReservationTax

8.3.9 (21-06-2022)
- Refactor: When creating consider academic tariffs with AdministrativeOffice or without AdministrativeOffice as the same, when checking if there is a overlapping tariffs
- Refactor: Find match of academic tariffs for degreeType, degree or cycle type with or without AdministrativeOffice

8.3.8 (21-06-2022)
- Bug Fix: Fix condition in check rules for requirement of TuitionInstallmentTariff fixedAmount
- Bug Fix: Check if TuitionPaymentPlan.customizedName is not null before filling it in TuitionPaymentPlanBean
- Bug Fix: Intialize map between condition and values in TuitionPaymentPlanBean

8.3.7 (18-06-2022)
- Bug Fix: Return degreeCode for AcademicTreasuryEvent, for standaloneTuition, extracurricularTuition, improvementTuition and customAcademicDebt

8.3.6 (02-06-2022)